--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
+    "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
