--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -11,7 +11,8 @@
     "@babel/preset-react": "^7.14.5",
     "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "yarn": "^1.22.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
